[gd_scene load_steps=7 format=3 uid="uid://sic3jewj25no"]

[ext_resource type="Script" path="res://entities/menu/play/create_world_menu.gd" id="1_pytys"]
[ext_resource type="StyleBox" uid="uid://cctkf4pugncdx" path="res://entities/menu/default_button_style.tres" id="2_2gu6j"]
[ext_resource type="StyleBox" uid="uid://d05lhiqyvpmwy" path="res://entities/menu/default_button_selected.tres" id="2_xrlxj"]
[ext_resource type="Texture2D" uid="uid://dyrk2gnhkwd5f" path="res://assets/art/icons/Plus.svg" id="3_0b5cr"]
[ext_resource type="Texture2D" uid="uid://c6t8fe4n3q5j0" path="res://assets/art/icons/Exit.svg" id="3_qloc6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0evhb"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CreateWorldMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pytys")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -48

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 40
text = "Create World"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_styles/hover = ExtResource("2_xrlxj")
theme_override_styles/pressed = ExtResource("2_xrlxj")
theme_override_styles/normal = ExtResource("2_2gu6j")
text = "Back"
icon = ExtResource("3_qloc6")
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -48

[node name="CreateWorldButton" type="Button" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_styles/hover = ExtResource("2_xrlxj")
theme_override_styles/pressed = ExtResource("2_xrlxj")
theme_override_styles/normal = ExtResource("2_2gu6j")
text = "Create World"
icon = ExtResource("3_0b5cr")
expand_icon = true

[node name="Panel" type="Panel" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_0evhb")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WorldName" type="LineEdit" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/focus = ExtResource("2_xrlxj")
theme_override_styles/normal = ExtResource("2_2gu6j")
placeholder_text = "World Name"
max_length = 20
expand_to_text_length = true

[node name="CharacterName" type="LineEdit" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/focus = ExtResource("2_xrlxj")
theme_override_styles/normal = ExtResource("2_2gu6j")
placeholder_text = "Character Name"
max_length = 20
expand_to_text_length = true

[node name="Seed" type="LineEdit" parent="MarginContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_styles/focus = ExtResource("2_xrlxj")
theme_override_styles/normal = ExtResource("2_2gu6j")
placeholder_text = "Seed (Leave Blank For Random)"
max_length = 20
expand_to_text_length = true
